# PipesTp

./: .gitignore  CMakeLists.txt  TODO
data/: CMakeLists.txt  PipesCM-telepathy.service.in
interfaces/: org.freedesktop.Telepathy.Pipe.xml
src/: CMakeLists.txt  approver.cpp  approver.hpp  casehandler.hpp  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  connection_utils.hpp  contact_list.cpp  contact_list.hpp  defines.hpp  main.cpp  pipe_exception.hpp  pipe_proxy.hpp  pipesTpService  protocol.cpp  protocol.hpp  proxy_channel.cpp  proxy_channel.hpp  qdbus_gen_includes.hpp  simple_presence.cpp  simple_presence.hpp  types.hpp  utils.hpp
